--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "new-ui-kit-component": "bash scripts/new-ui-kit-component.sh"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "@storybook/cli": "^6.0.28",
     "@styled-system/theme-get": "^5.1.2",
+    "graphql": "^15.4.0",
     "next": "10.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
