--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@styled-system/theme-get": "^5.1.2",
     "graphql": "^15.4.0",
     "next": "10.0.0",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
