--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "npx eslint ./",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "new-component": "bash scripts/new-component.sh"
+    "new-component": "bash scripts/new-component.sh",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
@@ -33,6 +34,7 @@
     "@storybook/addons": "^6.0.28",
     "@storybook/react": "^6.0.28",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.12.1",
@@ -44,6 +46,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2"
   }
 }
