--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/cli": "^6.0.28",
     "@styled-system/theme-get": "^5.1.2",
     "apollo3-cache-persist": "^0.8.0",
+    "cross-fetch": "^3.0.6",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
     "next": "10.0.0",
