--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.20",
     "next": "10.0.0",
     "nprogress": "^0.2.0",
+    "phosphor-react": "^1.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
