--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/cli": "^6.1.11",
     "@styled-system/theme-get": "^5.1.2",
     "apollo3-cache-persist": "^0.8.0",
+    "color": "^3.1.3",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
