Ignore project spell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
   "cSpell.ignoreWords": [
-    "CRDS",
+    "boynton",
     "cfri",
+    "CRDS",
     "cwed",
+    "daytona",
+    "desaturate",
     "iphone",
     "lifecycle",
+    "lucie",
     "onboarding",
     "ondevice",
     "overscroll",
     "overscrolling",
+    "picton",
     "refetch",
     "subviews",
     "swiper",
     "viewability",
     "wireframe"
-  ],
-  "cSpell.words": [
-    "boynton",
-    "daytona",
-    "lucie"
   ]
 }
