--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-is": "^17.0.1",
+    "react-multi-carousel": "^2.6.1",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
