--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
   "cSpell.ignoreWords": [
+    "CRDS",
     "boynton",
     "cfri",
-    "CRDS",
     "cwed",
     "daytona",
     "desaturate",
     "iphone",
     "lifecycle",
+    "livestreams",
     "lucie",
     "onboarding",
     "ondevice",
