--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "cSpell.ignoreWords": [
-    "CRDS",
     "boynton",
     "cfri",
+    "CRDS",
     "cwed",
     "daytona",
     "desaturate",
@@ -11,6 +11,7 @@
     "livestreams",
     "longform",
     "lucie",
+    "muxjs",
     "onboarding",
     "ondevice",
     "overscroll",
