--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
     "lodash": "^4.17.20",
+    "mux.js": "^5.9.2",
     "next": "10.0.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -30,6 +31,7 @@
     "react-dom": "17.0.1",
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
+    "shaka-player-react": "^1.1.2",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
