Create LiveStreamSingle page (#57)
* Alphabetize hook imports

* ignore livestreams word

* Migrate liveStream hooks over, fetch all on /live

* Ignore word 'longform'

* Fix possible slugify bug

* Create LiveStreamProvider file

* Create LiveStreamSingle

* Missed from previous commit

* Data fetching for livestream from title

* Remove logs and simplify temp LiveStreamSingle view

* Fix bug when hydrating useLiveStream query

* Show list of livestreams

* Ignore muxjs

* Install shaka player and mux.js

* Create Video component

* Use Video component in LiveStreamSingle

* Remove logs and update fetch-policy

* Remove logs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,10 @@
     "desaturate",
     "iphone",
     "lifecycle",
+    "livestreams",
+    "longform",
     "lucie",
+    "muxjs",
     "onboarding",
     "ondevice",
     "overscroll",
