--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
+    "html-to-react": "^1.4.5",
     "lodash": "^4.17.20",
     "mux.js": "^5.9.2",
     "next": "10.0.0",
