--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "shaka-player-react": "^1.1.2",
+    "stream-chat": "^3.6.2",
+    "stream-chat-react": "^4.1.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
