--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-dom": "^4.0.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "video.js": "^7.11.4"
   }
 }
