yarn lock and spelling ignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,9 @@
     "viewability",
     "wireframe"
   ],
-  "cSpell.words": ["streami18n"]
+  "cSpell.words": [
+    "n",
+    "streami",
+    "streami18n"
+  ]
 }
