More spelling word settings fiddling argh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,11 @@
     "wireframe"
   ],
   "cSpell.words": [
+    "chat",
+    "livestream",
+    "message",
     "n",
+    "str",
     "streami",
     "streami18n"
   ]
