--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,34 +2,32 @@
   "cSpell.ignoreWords": [
     "boynton",
     "cfri",
+    "chat",
     "CRDS",
     "cwed",
     "daytona",
     "desaturate",
     "iphone",
     "lifecycle",
+    "livestream",
     "livestreams",
     "longform",
     "lucie",
+    "message",
     "muxjs",
+    "n",
     "onboarding",
     "ondevice",
     "overscroll",
     "overscrolling",
     "picton",
     "refetch",
+    "str",
+    "streami",
+    "streami18n",
     "subviews",
     "swiper",
     "viewability",
     "wireframe"
-  ],
-  "cSpell.words": [
-    "chat",
-    "livestream",
-    "message",
-    "n",
-    "str",
-    "streami",
-    "streami18n"
   ]
 }
