--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@storybook/cli": "^6.1.11",
     "@styled-system/theme-get": "^5.1.2",
     "apollo3-cache-persist": "^0.8.0",
