--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-ga": "^3.3.0",
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "shaka-player-react": "^1.1.2",
