--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,22 +2,29 @@
   "cSpell.ignoreWords": [
     "boynton",
     "cfri",
+    "chat",
     "CRDS",
     "cwed",
     "daytona",
     "desaturate",
     "iphone",
     "lifecycle",
+    "livestream",
     "livestreams",
     "longform",
     "lucie",
+    "message",
     "muxjs",
+    "n",
     "onboarding",
     "ondevice",
     "overscroll",
     "overscrolling",
     "picton",
     "refetch",
+    "str",
+    "streami",
+    "streami18n",
     "subviews",
     "swiper",
     "viewability",
