--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@storybook/cli": "^6.1.11",
     "@styled-system/theme-get": "^5.1.2",
     "apollo3-cache-persist": "^0.8.0",
@@ -25,7 +26,7 @@
     "html-to-react": "^1.4.5",
     "lodash": "^4.17.20",
     "mux.js": "^5.9.2",
-    "next": "10.0.0",
+    "next": "10.1.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
@@ -33,6 +34,8 @@
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "shaka-player-react": "^1.1.2",
+    "stream-chat": "^3.6.2",
+    "stream-chat-react": "^4.1.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
