Update to use Amplitude directly

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@apollo/client": "^3.2.5",
     "@storybook/cli": "^6.1.11",
     "@styled-system/theme-get": "^5.1.2",
+    "amplitude-js": "^8.1.0",
     "apollo3-cache-persist": "^0.8.0",
     "color": "^3.1.3",
     "cross-fetch": "^3.0.6",
