--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@apollo/client": "^3.2.5",
     "@storybook/cli": "^6.1.11",
     "@styled-system/theme-get": "^5.1.2",
+    "algoliasearch": "^4.9.0",
     "apollo3-cache-persist": "^0.8.0",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.17.0",
@@ -30,6 +31,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-instantsearch-dom": "^6.10.3",
     "react-is": "^17.0.1",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
