--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@storybook/cli": "^6.1.11",
     "@styled-system/theme-get": "^5.1.2",
+    "amplitude-js": "^8.1.0",
     "apollo3-cache-persist": "^0.8.0",
     "color": "^3.1.3",
     "cross-fetch": "^3.0.6",
