--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "color": "^3.1.3",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
+    "device-agnostic-ui": "^7.0.1",
     "graphql": "^15.4.0",
     "html-to-react": "^1.4.5",
     "lodash": "^4.17.20",
