--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@storybook/cli": "^6.1.11",
     "@styled-system/theme-get": "^5.1.2",
     "amplitude-js": "^8.1.0",
