--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@storybook/cli": "^6.1.11",
+    "@storybook/cli": "^6.3.7",
     "@styled-system/theme-get": "^5.1.2",
     "amplitude-js": "^8.1.0",
     "apollo3-cache-persist": "^0.8.0",
@@ -36,37 +36,42 @@
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "shaka-player-react": "^1.1.2",
-    "storybook": "^6.2.9",
-    "stream-chat": "^3.6.2",
+    "storybook": "^6.3.7",
+    "stream-chat": "3.1.x",
     "stream-chat-react": "^4.1.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/addons": "^6.1.11",
-    "@storybook/react": "^6.1.11",
+    "@babel/eslint-parser": "^7.15.0",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addons": "^6.3.7",
+    "@storybook/manager-webpack5": "^6.3.7",
+    "@storybook/react": "^6.3.7",
     "@testing-library/dom": "^7.26.5",
-    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.1.1",
-    "babel-eslint": "^10.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.0",
+    "@typescript-eslint/parser": "^4.0.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.12.1",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
-    "jest-dom": "^4.0.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   }
 }
