--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "html-to-react": "^1.4.5",
     "lodash": "^4.17.20",
     "mux.js": "^5.9.2",
-    "next": "10.1.2",
+    "next": "11.1.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-dom": "17.0.1",
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "shaka-player-react": "^1.1.2",
     "storybook": "^6.3.7",
-    "stream-chat": "3.1.x",
-    "stream-chat-react": "^4.1.3",
+    "stream-chat": "4.1.0",
+    "stream-chat-react": "6.6.0",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
