--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "react-multi-carousel": "^2.6.1",
     "shaka-player-react": "^1.1.2",
     "storybook": "^6.3.7",
-    "stream-chat": "4.1.0",
-    "stream-chat-react": "6.6.0",
+    "stream-chat": "3.1.x",
+    "stream-chat-react": "^4.1.3",
     "styled-components": "^5.2.1",
     "styled-system": "^5.1.5"
   },
