External Home Page (#265)
* added DarkMode to Header

* Added initial ExternalHome component - NOT COMPLETE

* Updated 'HeroLanding' page

* Updated/fixed styling and photos

* Started on new External Home page design

* Added GradientBackground component

* Updated External Home page

* Added mobile styling

* Update external-home.js

* Updated landing page

* Update DiscoverFilterSection.js

* Create shape-mask-1.svg

* Fixed spacing

* Update external-home.js

* Added masking ability to Image component

* Add variant for Grid Section

* Additional copy/style updates

* Fixed mobile styling and Hero Title, and added shadows to Start Here cards

* Resizing hero content

* Move ValueStack to dedicated UI component

* ValueStack patch

* Horizontal Padding on TextCarousel

* Fix spacing for StartHere on mobile

* Brand assets/colors updated

* Added Cotton Candy

* Updated Stay in the Know

* Changed width

* Added Welcome Modal

* Install HotJar

* Added sign in to Welcome Modal

* Added Dynamic background to navbar

* Update navbar color

* Setup initial analytics *need fix for GA

* Enable 'gtag'

* [CFDP-1557] Updated Navbar to Figma mockup

* [CFDP-1609] Updated Life to the Fullest section

* [CFDP-1614] It All Starts Here section

* Updated higher res images, and Do More than Get By section

* Added login button

* Styling and Analytics Update

* fixed Amplitude and added button click tracking to External Home calls to action
* fixed mobile styling
* added urls to 'It all starts here' section
* added "Never miss at thing." section

* Fix blue dots in “Do More than…” section

* External Web Update

* cropped LifeToTheFullest Images
* fixes Button hover for Hero section
* updated Start here links nav
* fixed highlight effect for LifeToTheFullest section
* added Card scaling on hover for ItAllStartsHere section
* fixed background ellipse in LifeToTheFullest section
* ref

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "@storybook/addon-controls": "^6.3.7",
     "@storybook/cli": "^6.3.7",
     "@styled-system/theme-get": "^5.1.2",
@@ -36,6 +37,7 @@
     "react-dom": "17.0.1",
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
+    "react-simple-typewriter": "^3.0.0",
     "shaka-player": "^3.2.0",
     "shaka-player-react": "^1.1.2",
     "storybook": "^6.3.7",
