--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -12,5 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name:  'Automated Github Action Version Bump'
-        uses:  'rimonhanna/gh-action-bump-version@master'
+      - name: 'cat package.json'
+        run: cat ./package.json
+
+      - name:  'Automated Version Bump'
+        uses:  'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          skip-tag:  'true'
+
+      - name: 'cat package.json'
+        run: cat ./package.json
