--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@fingerprintjs/fingerprintjs-pro": "^3.5.3",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@storybook/addon-controls": "^6.3.7",
     "@storybook/cli": "^6.3.7",
@@ -43,7 +44,8 @@
     "stream-chat": "3.1.x",
     "stream-chat-react": "^4.1.3",
     "styled-components": "^5.2.1",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
