--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-multi-carousel": "^2.6.1",
     "react-player": "^2.9.0",
     "react-simple-typewriter": "^3.0.0",
+    "shaka-player-react": "^1.1.2",
     "storybook": "^6.3.7",
     "stream-chat": "3.1.x",
     "stream-chat-react": "^4.1.3",
