--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "react-player": "^2.9.0",
+    "react-quill": "^1.3.5",
     "react-simple-typewriter": "^3.0.0",
     "storybook": "^6.3.7",
     "stream-chat": "3.1.x",
