--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@storybook/cli": "^6.3.7",
     "@styled-system/theme-get": "^5.1.2",
     "amplitude-js": "^8.1.0",
-    "apollo3-cache-persist": "^0.8.0",
+    "apollo3-cache-persist": "^0.13.0",
     "color": "^3.1.3",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
@@ -39,6 +39,7 @@
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "react-player": "^2.9.0",
+    "react-quill": "^1.3.5",
     "react-simple-typewriter": "^3.0.0",
     "storybook": "^6.3.7",
     "stream-chat": "3.1.x",
