--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-player": "^2.9.0",
     "react-quill": "^1.3.5",
     "react-simple-typewriter": "^3.0.0",
+    "sanitize-html": "^2.7.0",
     "storybook": "^6.3.7",
     "stream-chat": "3.1.x",
     "stream-chat-react": "^4.1.3",
