--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
     "html-to-react": "^1.4.5",
+    "ical.js": "^1.5.0",
     "lodash": "^4.17.20",
     "mux.js": "^5.9.2",
     "next": "11.1.2",
