--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "lint": "npx eslint ./",
@@ -78,6 +79,7 @@
     "eslint-webpack-plugin": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "next-sitemap": "^2.5.1",
     "prettier": "^2.1.2",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
