--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@testing-library/react": "^11.1.1",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.11.1",
