--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "next": "12",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.1",
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "react-player": "^2.9.0",
