--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "color": "^3.1.3",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
-    "graphql": "^15.4.0",
+    "graphql": "^16.6.0",
     "html-to-react": "^1.4.5",
     "ical.js": "^1.5.0",
     "lodash": "^4.17.20",
     "mux.js": "^5.9.2",
-    "next": "12",
+    "next": "^13.4.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "react-player": "^2.9.0",
