--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "react-is": "^17.0.1",
     "react-multi-carousel": "^2.6.1",
     "react-player": "^2.9.0",
-    "react-quill": "^1.3.5",
-    "react-simple-typewriter": "^3.0.0",
+    "react-quill": "^2.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "sanitize-html": "^2.7.0",
-    "storybook": "^6.3.7",
-    "stream-chat": "3.1.x",
-    "stream-chat-react": "^4.1.3",
-    "styled-components": "^5.2.1",
+    "storybook": "^7.0.18",
+    "stream-chat": "^8.8.0",
+    "stream-chat-react": "^10.8.1",
+    "styled-components": "^6.0.0-rc.3",
     "styled-system": "^5.1.5",
     "url": "^0.11.0"
   },
@@ -83,6 +83,6 @@
     "next-sitemap": "^2.5.1",
     "prettier": "^2.1.2",
     "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^5.1.3"
   }
 }
