--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "stream-chat-react": "^10.8.1",
     "styled-components": "^6.0.0-rc.3",
     "styled-system": "^5.1.5",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "webpack": "^5.86.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -82,7 +83,6 @@
     "jest": "^29.5.0",
     "next-sitemap": "^4.1.3",
     "prettier": "^2.1.2",
-    "webpack": "^5.51.1",
     "webpack-cli": "^5.1.3"
   }
 }
