--- a/package.json
+++ b/package.json
@@ -21,68 +21,68 @@
     "@fingerprintjs/fingerprintjs-pro": "^3.5.3",
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "@segment/analytics-next": "^1.46.0",
-    "@storybook/addon-controls": "^6.3.7",
-    "@storybook/cli": "^6.3.7",
+    "@storybook/addon-controls": "^7.0.18",
+    "@storybook/cli": "^7.0.18",
     "@styled-system/theme-get": "^5.1.2",
     "amplitude-js": "^8.1.0",
-    "apollo3-cache-persist": "^0.13.0",
-    "color": "^3.1.3",
+    "apollo3-cache-persist": "^0.14.1",
+    "color": "^4.2.3",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
-    "graphql": "^15.4.0",
+    "graphql": "^16.6.0",
     "html-to-react": "^1.4.5",
     "ical.js": "^1.5.0",
     "lodash": "^4.17.20",
-    "mux.js": "^5.9.2",
-    "next": "12",
+    "mux.js": "^6.3.0",
+    "next": "^13.4.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.1",
-    "react-is": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "react-multi-carousel": "^2.6.1",
     "react-player": "^2.9.0",
-    "react-quill": "^1.3.5",
-    "react-simple-typewriter": "^3.0.0",
+    "react-quill": "^2.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "sanitize-html": "^2.7.0",
-    "storybook": "^6.3.7",
-    "stream-chat": "3.1.x",
-    "stream-chat-react": "^4.1.3",
-    "styled-components": "^5.2.1",
+    "storybook": "^7.0.18",
+    "stream-chat": "^8.8.0",
+    "stream-chat-react": "^10.8.1",
+    "styled-components": "^6.0.0-rc.3",
     "styled-system": "^5.1.5",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "webpack": "^5.86.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.15.0",
-    "@storybook/addon-actions": "^6.3.7",
-    "@storybook/addon-links": "^6.3.7",
+    "@storybook/addon-actions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.3.7",
-    "@storybook/manager-webpack5": "^6.3.7",
-    "@storybook/react": "^6.3.7",
-    "@testing-library/dom": "^7.26.5",
+    "@storybook/addons": "^7.0.18",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^7.0.18",
+    "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^4.0.0",
-    "babel-jest": "^26.6.3",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-styled-components": "^1.11.1",
-    "eslint": "^7.12.1",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.2.0",
+    "@testing-library/react": "^14.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "babel-jest": "^29.5.0",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-styled-components": "^2.1.3",
+    "eslint": "^8.42.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^3.0.1",
+    "eslint-webpack-plugin": "^4.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "next-sitemap": "^2.5.1",
+    "jest": "^29.5.0",
+    "next-sitemap": "^4.1.3",
     "prettier": "^2.1.2",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^5.1.3"
   }
 }
