--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "react-simple-typewriter": "^5.0.1",
     "sanitize-html": "^2.7.0",
     "storybook": "^7.0.18",
-    "stream-chat": "^8.8.0",
-    "stream-chat-react": "^10.8.1",
+    "stream-chat": "3.1.x",
+    "stream-chat-react": "^4.1.3",
     "styled-components": "^6.0.0-rc.3",
     "styled-system": "^5.1.5",
     "url": "^0.11.0",
