--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -15,9 +15,15 @@ jobs:
             echo "Creating dev branch"
             git checkout -b dev
           fi
+      - name: Render template
+        id: template
+        uses: chuhlomin/render-template@v1.4
+        with:
+          template: .github/pull-request-template.md
+      - name: Create PR
       - uses: peter-evans/create-pull-request@v1
         with:
           branch: 'dev'
           base: 'master'
           title: 'Weekly PR - `r format(Sys.Date(), "%d %B %Y")`'
-          body: ${{ template_file('.github/WEEKLY_PULL_REQUEST_TEMPLATE.md') }}
+          body: ${{ steps.template.outputs.result }}
