--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Change to repository directory
-        run: cd <path/to/repository>
+        run: cd $GITHUB_WORKSPACE
 
       - name: Check if dev branch exists
         run: |
@@ -35,3 +35,4 @@ jobs:
           base: 'main'
           title: "Weekly PR - $(date +'%d %B %Y')"
           body: ${{ steps.render-template.outputs.result }}
+
