--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Change to repository directory
         run: cd $GITHUB_WORKSPACE
 
+      - name: Fetch latest changes
+        run: git fetch
+
       - name: Check if dev branch exists
         run: |
           if [[ ! -d "dev" ]]; then
