--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -14,15 +14,17 @@ jobs:
       - name: Change to repository directory
         run: cd $GITHUB_WORKSPACE
 
-      - name: Fetch latest changes
-        run: git fetch --all
-
       - name: Check if dev branch exists
         run: |
           if [[ ! -d "dev" ]]; then
             echo "dev branch does not exist"
             echo "Creating dev branch"
-            git checkout -b dev origin/dev
+            git branch dev
+            git checkout dev
+          else
+            echo "dev branch already exists"
+            git checkout dev
+            git pull origin dev
           fi
 
       - name: Render template
