--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -21,6 +21,7 @@ jobs:
             echo "Creating dev branch"
             git branch dev
             git checkout dev
+            git branch -u origin/dev
           else
             echo "dev branch already exists"
             git checkout dev
