--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -28,6 +28,9 @@ jobs:
             git checkout dev
             git pull origin dev
           fi
+          
+      - name: Add dummy commit to dev branch to show changes
+        run: echo "Dummy commit" >> dummy-file.txt && git add dummy-file.txt && git commit -m "Dummy commit" && git push origin dev
 
       - name: Render template
         id: render-template
