--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -10,15 +10,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        with:
-          ref: 'refs/heads/dev'
 
       - name: Change to repository directory
         run: cd $GITHUB_WORKSPACE
 
+      - name: Fetch latest changes
+        run: git fetch
+
       - name: Check if dev branch exists
         run: |
-          if [[ ! -d "dev" ]]; then
+          if [[ ! $(git show-ref --quiet refs/heads/dev) ]]; then
             echo "dev branch does not exist"
             echo "Creating dev branch"
             git checkout -b dev
