--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -8,6 +8,11 @@ jobs:
   create-pr:
     runs-on: ubuntu-latest
     steps:
+      - name: Set Git config
+        run: |
+          git config user.email "developer@christfellowship.church"
+          git config user.name "christfellowshipdev"
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -29,9 +34,13 @@ jobs:
             git checkout dev
             git pull origin dev
           fi
-          
+
       - name: Add dummy commit to dev branch to show changes
-        run: echo "Dummy commit" >> dummy-file.txt && git add dummy-file.txt && git commit -m "Dummy commit" && git push origin dev
+        run: |
+          echo "Dummy commit" >> dummy-file.txt
+          git add dummy-file.txt
+          git commit -m "Dummy commit"
+          git push origin dev
 
       - name: Render template
         id: render-template
