--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -18,17 +18,20 @@ jobs:
         run: git fetch
 
       - name: Check if dev branch exists
+        id: check-dev-branch
+        run: echo "::set-output name=exists::$(git show-ref --quiet refs/heads/dev && echo exists || echo not_exists)"
+
+      - name: Create dev branch if it doesn't exist
         run: |
-          if git rev-parse --verify --quiet dev; then
-            echo "dev branch already exists"
-            git checkout dev
-            git pull origin dev
-          else
+          if [[ "${{ steps.check-dev-branch.outputs.exists }}" == "not_exists" ]]; then
             echo "dev branch does not exist"
             echo "Creating dev branch"
             git checkout -b dev
-            git pull origin dev --allow-unrelated-histories
             git push -u origin dev
+          else
+            echo "dev branch already exists"
+            git checkout dev
+            git pull origin dev
           fi
 
       - name: Add dummy commit to dev branch to show changes
