--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "react-multi-carousel": "^2.6.1",
+    "react-multi-carousel": "2.8.4",
     "react-player": "^2.9.0",
     "react-quill": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
