--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "next start",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "lint": "npx eslint ./",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "new-component": "bash scripts/new-component.sh",
     "test": "jest --watch",
     "prestart": "node ./scripts/get-introspection-data.js"
@@ -47,7 +47,7 @@
     "react-quill": "^2.0.0",
     "react-simple-typewriter": "^5.0.1",
     "sanitize-html": "^2.7.0",
-    "storybook": "^7.0.18",
+    "storybook": "^7.4.6",
     "stream-chat": "3.1.x",
     "stream-chat-react": "^4.1.3",
     "styled-components": "^6.0.0-rc.3",
@@ -58,12 +58,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.15.0",
-    "@storybook/addon-actions": "^7.0.18",
-    "@storybook/addon-links": "^7.0.18",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^7.0.18",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^7.0.18",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/nextjs": "^7.4.6",
+    "@storybook/react": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^14.0.0",
@@ -80,6 +82,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-webpack-plugin": "^4.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
