Updated Stream and deprecated components
* We may want to revisit the `MessageInput` component and create our own custom one: https://getstream.io/chat/docs/sdk/react/guides/theming/input_ui/

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-utils": "^1.2.0",
     "react-is": "^18.2.0",
     "react-multi-carousel": "2.8.4",
     "react-player": "^2.9.0",
@@ -48,8 +49,8 @@
     "react-simple-typewriter": "^5.0.1",
     "sanitize-html": "^2.7.0",
     "storybook": "^7.0.18",
-    "stream-chat": "3.1.x",
-    "stream-chat-react": "^4.1.3",
+    "stream-chat": "^8.13.0",
+    "stream-chat-react": "^10.14.0",
     "styled-components": "^6.0.0-rc.3",
     "styled-system": "^5.1.5",
     "url": "^0.11.0",
