--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@styled-system/theme-get": "^5.1.2",
     "amplitude-js": "^8.1.0",
     "apollo3-cache-persist": "^0.14.1",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "color": "^4.2.3",
     "create-pull-request": "^1.4.0",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.30.0",
     "eslint-config-next": "^13.4.10",
     "graphql": "^16.6.0",
+    "html-react-parser": "^5.1.10",
     "html-to-react": "^1.4.5",
     "ical.js": "^1.5.0",
     "lodash": "^4.17.20",
