--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "create-pull-request": "^1.4.0",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.30.0",
+    "embla-carousel-autoplay": "^8.0.1",
+    "embla-carousel-react": "^8.0.1",
     "eslint-config-next": "^13.4.10",
     "graphql": "^16.6.0",
     "html-to-react": "^1.4.5",
