--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "create-pull-request": "^1.4.0",
     "cross-fetch": "^3.0.6",
     "date-fns": "^2.30.0",
+    "embla-carousel-auto-height": "^8.0.2",
     "embla-carousel-auto-scroll": "^8.0.1",
     "embla-carousel-react": "^8.0.1",
     "eslint-config-next": "^13.4.10",
