--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^2.30.0",
     "embla-carousel-auto-height": "^8.0.2",
     "embla-carousel-auto-scroll": "^8.0.1",
+    "embla-carousel-autoplay": "^8.0.2",
     "embla-carousel-react": "^8.0.1",
     "eslint-config-next": "^13.4.10",
     "graphql": "^16.6.0",
