--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "html-to-react": "^1.4.5",
     "ical.js": "^1.5.0",
     "lodash": "^4.17.20",
+    "lottie-web": "^5.12.2",
     "mux.js": "^6.3.0",
     "next": "^13.4.4",
     "nprogress": "^0.2.0",
