--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@styled-system/theme-get": "^5.1.2",
     "amplitude-js": "^8.1.0",
     "apollo3-cache-persist": "^0.14.1",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "color": "^4.2.3",
     "create-pull-request": "^1.4.0",
     "cross-fetch": "^3.0.6",
